results/SVCOMP/conversational/log-CharSequenceToString-2024_03_09_09_06_24.txt
public class CharSequenceToString {

    //@ requires arg != null;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
  
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                        ^
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                                         ^
2 errors

public class CharSequenceToString {

    //@ requires arg != null;
    //@ ensures \result == true || \result == false;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
  
}
